# SQL_Agent

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  aws_deployment.md  design.md  pyproject.toml  requirement.md  thing_to_improve.md  todo.md
analysis_notebooks/: model_validation.ipynb
data/: Customer Service Tables.xlsx  create_data.py
design_decisions/: api_design.md  design_requirements.md
design_decisions/ADRs/: 0_what _need_deicsions.md  ADR_001_do_we_need_agents.md  ADR_002_do_we_need_rag.md  ADR_003_llm_model_choice.md  ADR_004_do_we_need_cache.md  ADR_005_agent_loop_limits.md  ADR_006_prompt_injection.md  ADR_007_langgraph_nodes.md
scripts/: 1_latency_betchmark.md  latency_check.py
sql_agent/: main.py  ui.py
sql_agent/agent/: graph.py  state.py
sql_agent/agent/edges/: should_retry.py
sql_agent/agent/nodes/: agentic_recover.py  cache_check.py  generate.py  inject_check.py  retrieve.py  validate.py
sql_agent/config/: models.py  settings.py
sql_agent/indexing/: retriever.py
sql_agent/utils/: cache.py  logger.py  metrics.py  schema_loader.py
